password for cidana server has been updated

--- a/view/tutorial/reportroyalty.html
+++ b/view/tutorial/reportroyalty.html
@@ -16,7 +16,7 @@
         <div>账号(区分大小写）：</div>
         <table border="1" style="margin-left:2.5rem;">
             <tr><td><b>Username:</b></td><td>Sophie</td> </tr>
-            <tr><td><b>Password: </b></td><td>sophie</td></tr>
+            <tr><td><b>Password: </b></td><td>sophie@2021</td></tr>
         </table>
     </div>
     <div style="margin-left:2.5rem;">网址：https://sshz.cidanash.com:9090/content.html#/itemClick/CONTENT_CUSTOMER?_k=qlpl7b
