update password of sshz

--- a/view/tutorial/deliverylicenseserver.html
+++ b/view/tutorial/deliverylicenseserver.html
@@ -9,7 +9,7 @@
     <div style="margin-left:2.5rem;">
         <table border="1" style="margin-left:2.5rem;">
             <tr><td><b>Username:</b></td><td>Sophie</td><td><button onclick="copyPrev(this)">复制</button></td></tr>
-            <tr><td><b>Password: </b></td><td>sophie</td><td><button onclick="copyPrev(this)">复制</button></td></tr>
+            <tr><td><b>Password: </b></td><td>sophie@2021</td><td><button onclick="copyPrev(this)">复制</button></td></tr>
         </table>
     </div>
     <div style="margin-left:2.5rem;">
