--- a/view/tutorial/introtool.html
+++ b/view/tutorial/introtool.html
@@ -110,6 +110,6 @@
     <p>地址：<a href="https://sshz.cidanash.com:9090/index.html" target="_blank">+前往+</a></p>
     <table style="margin-left:3rem;">
         <tr><td>用户名:</td><td><span>Sophie</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
-        <td>密码:</td><td>sophie</td><td><button onclick="copyPrev(this)">COPY</button></td>
+        <td>密码:</td><td>sophie@2021</td><td><button onclick="copyPrev(this)">COPY</button></td>
     </table>
 </div>
