--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -64,6 +64,15 @@
         .buttonFunc >a {
             text-decoration:none;
         }
+
+        .task-record{
+            padding-left:0.5rem;
+            display:flex;
+            flex-direction:row;
+            border-radius:5px;
+            padding-top:2px;
+            padding-bottom:2px;
+        }
     </style>
 </head>
 
@@ -143,31 +152,42 @@
     <div style="width:100%;border-bottom:solid 1px lightgray;padding-bottom:0.5rem;"></div>
     <div style="display:flex;flex-direction:row;" id="alertTypeSelector">
         <button class="inlineBtn" ng-repeat="x in [].constructor(maxType) track by $index" ng-click="changeType($index)" task-type type="{{$index}}" ng-disabled="$index === taskType"></button>
-        <button style="margin-left:auto;margin-right:2rem;height:1.5rem;margin-top:0.5rem;" ng-click="newTask()">NEW</button>
+        <div style="margin-left:auto;height:38px;line-height:38px;">HOURS/DAY</div>
+        <div class="switch-box" style="margin-left:1rem;margin-top:4px;">
+            <input id="switchButton" type="checkbox" class="switch" ng-model="dayOrHour" />
+            <label for="switchButton"></label>
+        </div>
+        <button style="margin-left:2rem;margin-right:2rem;height:1.5rem;margin-top:0.5rem;" ng-click="newTask()">NEW</button>
     </div>
 
     <div ng-show="records.length >0" style="display:flex;flex-direction:column;">
         <div>
             <div ng-repeat="rec in records" ng-show="rec.type === taskType && !duplicate(rec)" style="display:flex;flex-direction:column;margin-top:0.5rem;margin-left:0.5rem;">
-                <div style="display:flex;flex-direction:row;">
+                <div class="task-record" task-status status="{{rec.status}}" >
                     <div task-type type="{{rec.type}}" style="font-size:0.8rem;"></div>
                     <div style="margin-right:1rem;margin-left:1rem;line-height:1.5rem;max-width:25rem;width:25rem;">{{rec.title}}</div>
-                    <div hrs-sign style="margin-right:1rem;line-height:1.5rem;">{{rec.hours + ' hrs'}}</div>
+                    <div hrs-sign style="margin-right:1rem;line-height:1.5rem;" hrs="{{rec.hours}}" rec="{{rec}}">{{rec.hours + 'hrs'}}</div>
                     <div style="line-height:1.5rem;margin-right:1rem;">{{rec.plan.start | date:'&y/&m/&d'}}</div>
                     <div style="line-height:1.5rem;margin-right:1rem;">{{rec.plan.end | date:'&y/&m/&d'}}</div>
-                    <div style="line-height:1.5rem;margin-right:1rem;" hrs-compare rec="{{rec}}">{{rec.plan.hours + ' hrs'}}</div>
+                    <div style="line-height:1.5rem;margin-right:1rem;">{{rec.completed | date:'&y/&m/&d'}} <span ng-show="!rec.completed">UNCOMPLTED</span></div>
+                    <div style="line-height:1.5rem;margin-right:1rem;" rec="{{rec}}" hrs-sign hrs="{{rec.plan.hours}}">{{rec.plan.hours + 'hrs'}}</div>
                     <div class="buttonFunc" style="line-height:1rem;display:flex;flex-direction:row;">
                         <button class="inlineBtn" style="font-weight:bold;font-size:1rem;height:1rem;" ng-click="newChildTask(rec)">+</button>
+                        <button class="inlineBtn" style="font-size:1rem;margin-left:0;" ng-click="editTask(rec)" ng-disabled="rec.status >=4"><i class="fas fa-pen" style="margin:auto;"></i></button>
                         <a class="inlineBtn" style="margin-top:0;margin-bottom:auto;font-weight:bold;font-size:0.3rem;height:1rem;" target="_blank" href="{{'task/info?id='+ rec._id}}">●●●</a></div>
                 </div>
                 <div>
-                    <div ng-repeat="child in rec.children" style="display:flex;flex-direction:row;margin-left:2rem;">
+                    <div ng-repeat="child in rec.children" class="task-record" style="margin-left:2rem;" task-status status="{{child.status}}">
                         <div task-type type="{{child.type}}" style="font-size:0.4rem;"></div>
                         <div style="margin-right:1rem;margin-left:1rem;line-height:1.5rem;max-width:25rem;width:25rem;">{{child.title}}</div>
-                        <div hrs-sign style="margin-right:1rem;line-height:1.5rem;">{{child.hours + ' hrs'}}</div>
+                        <div hrs-sign style="margin-right:1rem;line-height:1.5rem;" hrs="{{child.hours}}" rec="{{rec}}">{{child.hours + ' hrs'}}</div>
                         <div style="line-height:1.5rem;margin-right:1rem;">{{child.plan.start | date:'&y/&m/&d'}}</div>
                         <div style="line-height:1.5rem;margin-right:1rem;">{{child.plan.end | date:'&y/&m/&d'}}</div>
-                        <div style="line-height:1.5rem;margin-right:1rem;" hrs-compare rec="child">{{child.plan.hours + ' hrs'}}</div>
+                        <div style="line-height:1.5rem;margin-right:1rem;">{{child.completed | date:'&y/&m/&d'}} <span ng-show="!child.completed">UNCOMPLTED</span></div>
+                        <div style="line-height:1.5rem;margin-right:1rem;" hrs-sign rec="{{child}}" hrs="{{child.plan.hours}}" >{{child.plan.hours + ' hrs'}}</div>
+                        <div class="buttonFunc" style="line-height:1rem;display:flex;flex-direction:row;">
+                            <button class="inlineBtn" style="font-size:0.3rem;margin-left:0;" ng-click="editTask(child)" ng-disabled="child.status >=4"><i class="fas fa-pen" style="margin:auto;"></i></button>
+                            <a class="inlineBtn" style="margin-top:0;margin-bottom:auto;font-weight:bold;line-height:0.5rem;" target="_blank" href="{{'task/info?id='+ child._id}}">…</a></div>
                     </div>
                 </div>
             </div>
@@ -387,7 +407,7 @@
                 <td doc-link contents="{{payment.doc}}" type="doc" style="text-align:left;min-width:10rem;"></td>
                 <td style="display:flex;flex-direction:column;text-align:center;">
                     <button ng-click="edit(payment)" class="linkBtn">EDIT</button>
-                    <button ng-click="delete(payment)" class="linkBtn" styler="margin-top:0.5rem;">DELETE</button></td>
+                    <button ng-click="delete(payment)" class="linkBtn" style="margin-top:0.5rem;">DELETE</button></td>
             </tr>
         </table>
     </div>
@@ -437,8 +457,49 @@
                 <div><textarea ng-disabled="savingTask" ng-model="newTask.description" style="min-height:8rem;min-width:30rem;border-radius:5px;"></textarea></div>
             </div>
         </div>
+        <div style="margin:1rem;display:flex;flex-direction:column;overflow-y:auto;" ng-controller="editTaskCon" ng-show="submitType == 'editTask'">
+            <div><input ng-model="newTask.title" placeholder="Task Title(mandatory)" style="min-width:30rem;margin-bottom:0.5rem;" disabled="true"></div>
+            <div style="display:flex;flex-direction:row;margin-bottom:0.5rem;height:2rem;position:relative;">
+                <div style="line-height:2rem;height:100%;margin-right:8px;">Type:</div>
+                <div><select ng-disabled="!switch_type || saving" ng-model="newTask.type" onchange="this.size=0" onmousedown="if(this.options.length>10){this.size=10}" onblur="this.size = 0" style="position:absolute;z-index:99;top:0.5rem;max-width:5rem;">
+                             <option value="1">Requirement</option>
+                             <option value="2">release</option>
+                             <option value="3">QA</option>
+                             <option value="0">Issue</option>
+                             <option value="4">Documentation</option>
+                             <option value="6">task</option>
+                             <option value="7">payment</option>
+                             <option value="5">Other</option>
+                             </select></div>
+                <div style="height:2.3rem;margin-left:5.5rem;display:flex;">
+                    <button ng-click="editContents('switch_type',$event.target,'type')" style="margin:auto;">EDIT</button>
+                </div>
+            </div>
+            <div style="margin-bottom:0.5rem;">Due On: <input  type="date" ng-model="newTask.dueOn" id="editDueOn"></div>
+            <div  style="display:flex;flex-direction:row;margin-bottom:0.5rem;"><div style="min-width:7.5rem;width:7.5rem;">related version:</div><div>
+                <select ng-disabled="saving" ng-model="newTask.version" onmousedown="if(this.options.length>10){this.size=10}" onblur="this.size = 0" style="position:absolute;z-index:95;" onchange="this.size=0">
+                    <option value="0">Please select version</option>
+                    <option ng-repeat="version in versions" value="{{version._id}}">{{version | versionname}}</option>
+                </select>
+            </div></div>
+            <div>Estimated Start: <input type="date" ng-model="newTask.plan.start" id="editStarter" ng-disabled="save || !switch_estimate"> </div>
+            <div>Estimated End: <input type="date" ng-model="newTask.plan.end" id="editEnd" ng-disabled="save || !switch_estimate"></div>
+            <div>Estimated Hours: <input ng-model="newTask.plan.hours" ng-disabled="save || !switch_estimate">
+                <button ng-click="calcHour()" ng-disabled="save || !switch_estimate">AUTO</button>
+                <button ng-click="editContents('switch_estimate',$event.target,'plan.start|plan.end|plan.hours')" ng-disabled="save">EDIT</button>
+                <button ng-click="cancelContents('switch_estimate',$event.target,'plan.start|plan.end|plan.hours')" ng-disabled="save" ng-show="switch_estimate">CANCEL</button>
+            </div>
+            <div style="position:relative;border-radius:10px;border:solid 1px rgba(55,55,55,1);margin-top:0.5rem;margin-right:2rem;min-height:8rem;min-width:30rem;background:lightgray;">
+                <textarea ng-disabled="saving" ng-show="switch_desc" ng-model="newTask.description" style="resize:none;border:none;margin-left:5px;position:absolute;left:0;top:0;min-height:7rem;min-width:30rem;font-family:arial;"></textarea>
+                <div style="font-family:arial;font-size:0.8rem;position:absolute;left:0;top:0;padding:5px;" ng-show="!switch_desc">{{newTask.description}}</div>
+                <div style="position:absolute;bottom:0;right:0;padding:5px;">
+                    <button ng-click="cancelContents('switch_desc',$event.target,'description')" ng-show="switch_desc">CANCEL</button>
+                    <button ng-click="editContents('switch_desc',$event.target,'description')">EDIT</button>
+                </div>
+            </div>
+        </div>
         <div style="display:flex;flex-direction:row;margin-bottom:1.5rem;margin-top:auto;">
-            <button style="margin-left:6rem;margin-right:auto;" ng-click="submitDoc()">提交</button>
+            <button style="margin-left:6rem;margin-right:auto;" ng-click="submitDoc()" ng-show="submitSelection != 1">提交</button>
             <button style="margin-left:auto;margin-right:6rem;" ng-click="cancelDoc()">取消</button>
         </div>
 
