--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -157,6 +157,7 @@
             <input id="switchButton" type="checkbox" class="switch" ng-model="dayOrHour" />
             <label for="switchButton"></label>
         </div>
+        <button style="margin-left:2rem;margin-right:2rem;height:1.5rem;margin-top:0.5rem;" ng-click="ExportExcel()">Export</button>
         <button style="margin-left:2rem;margin-right:2rem;height:1.5rem;margin-top:0.5rem;" ng-click="newTask()">NEW</button>
     </div>
 
