change password of ST

--- a/view/tutorial/introaccount.html
+++ b/view/tutorial/introaccount.html
@@ -61,7 +61,7 @@
                 <table>
                     <tr><td>username:</td><td><span>christina.li@cidana.com</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
                     <tr><td colspan="4"></td></tr>
-                    <tr><td>password:</td><td><span>C!LxEE208</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
+                    <tr><td>password:</td><td><span>C!LxEE208.*21</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
                 </table>
             </td>
             <td>ST项目中用来查询invoice支付情况的网站。</td>
